# ShipRouter

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
backend/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md
backend/cmake/: CLI11.cmake  pistache.cmake  progress.cmake  span.cmake  tbb.cmake
backend/include/: CHDijkstra.hpp  CHGraph.hpp  CoastlineLookup.hpp  Dijkstra.hpp  Environment.hpp  Graph.hpp  GraphContractor.hpp  LatLng.hpp  NodeLookup.hpp  Polygon.hpp  SeaRectangle.hpp  ServiceManager.hpp  SphericalGrid.hpp  SphericalPoint.hpp  Utils.hpp  Vector3D.hpp
backend/src/: CHDijkstra.cpp  Dijkstra.cpp  Graph.cpp  GraphContractor.cpp  NodeLookup.cpp  OSMNode.cpp  Polygon.cpp  ServiceManager.cpp  SphericalGrid.cpp  main.cpp
cmake/: flags.cmake  fmt.cmake  gtest.cmake  json.cmake  pistache.cmake  span.cmake
frontend/src/: api-service.ts  types.ts
frontend/src/components/: Map.vue
frontend/src/views/: Home.vue
include/: Coastline.hpp  CoastlineLookup.hpp  Constants.hpp  Dijkstra.hpp  Environment.hpp  LatLng.hpp  NodeLookup.hpp  OSMNode.hpp  PBFExtractor.hpp  Polygon.hpp  ServiceManager.hpp  SphericalGrid.hpp  SphericalPoint.hpp  Utils.hpp  Vector3D.hpp
src/: Coastline.cpp  CoastlineLookup.cpp  Dijkstra.cpp  NodeLookup.cpp  OSMNode.cpp  PBFExtractor.cpp  Polygon.cpp  ServiceManager.cpp  SphericalGrid.cpp  main.cpp
